--- a/ZxTap2Wav/ZxTap2Wav.csproj
+++ b/ZxTap2Wav/ZxTap2Wav.csproj
@@ -3,6 +3,7 @@
     <PropertyGroup>
         <OutputType>Exe</OutputType>
         <TargetFramework>net5.0</TargetFramework>
+        <RootNamespace>TestApp</RootNamespace>
     </PropertyGroup>
 
     <ItemGroup>
@@ -11,7 +12,10 @@
 
     <ItemGroup>
       <None Remove="test.tap" />
-      <Content Include="test.tap" />
+    </ItemGroup>
+
+    <ItemGroup>
+      <PackageReference Include="CommandLineParser" Version="2.8.0" />
     </ItemGroup>
 
 </Project>
