--- a/ZxTap2Wav/ZxTap2Wav.csproj
+++ b/ZxTap2Wav/ZxTap2Wav.csproj
@@ -1,11 +1,17 @@
 <Project Sdk="Microsoft.NET.Sdk">
 
     <PropertyGroup>
+        <RootNamespace>ZxTap2Wav</RootNamespace>
         <OutputType>Exe</OutputType>
         <TargetFramework>net5.0</TargetFramework>
-        <RootNamespace>TestApp</RootNamespace>
+        <PublishSingleFile>true</PublishSingleFile>
+        <SelfContained>true</SelfContained>
+        <RuntimeIdentifier>osx-x64</RuntimeIdentifier>
+        <PublishTrimmed>true</PublishTrimmed>
+        <PublishReadyToRun>true</PublishReadyToRun>
+        <PublishSingleFile>true</PublishSingleFile>
     </PropertyGroup>
-
+    
     <ItemGroup>
       <ProjectReference Include="..\ZxTap2Wav.Net\ZxTap2Wav.Net.csproj" />
     </ItemGroup>
