--- a/ZxTape2Wav/ZxTape2Wav.csproj
+++ b/ZxTape2Wav/ZxTape2Wav.csproj
@@ -13,6 +13,8 @@
 
     <ItemGroup>
       <None Remove="test.tap" />
+      <None Remove="test.tzx" />
+      <None Remove="test.wav" />
     </ItemGroup>
 
     <ItemGroup>
