--- a/ZxTape2Wav.Net/ZxTape2Wav.Net.csproj
+++ b/ZxTape2Wav.Net/ZxTape2Wav.Net.csproj
@@ -3,6 +3,16 @@
     <PropertyGroup>
         <TargetFramework>net5.0</TargetFramework>
         <RootNamespace>ZxTape2Wav</RootNamespace>
+        <PackageId>ZxTape2Wav.Net</PackageId>
+        <Title>Zx-Spectrum TAP/TZX file to Wav converter</Title>
+        <Copyright>© 2020 Andriy S'omak</Copyright>
+        <PackageProjectUrl>https://github.com/semack/ZxTape2Wave.Net</PackageProjectUrl>
+        <PackageVersion>1.0$(VersionSuffix)</PackageVersion>
+        <AssemblyVersion>1.0$(VersionSuffix)</AssemblyVersion>
+        <FileVersion>1.0$(VersionSuffix)</FileVersion>
+        <Description>Library to convert .TAP/.TZX files (a data format for ZX-Spectrum emulator) into sound WAV file.</Description>
+        <PackageTags>tap converter utility csharp dotnet tape wav zx-spectrum tzx</PackageTags>
+        <PackageLicenseExpression>MIT</PackageLicenseExpression>
     </PropertyGroup>
 
 </Project>
