--- a/ZxTape2Wav.Net/ZxTape2Wav.Net.csproj
+++ b/ZxTape2Wav.Net/ZxTape2Wav.Net.csproj
@@ -4,7 +4,7 @@
         <TargetFramework>net5.0</TargetFramework>
         <RootNamespace>ZxTape2Wav</RootNamespace>
         <PackageId>ZxTape2Wav.Net</PackageId>
-        <Title>Zx-Spectrum TAP/TZX file to Wav converter</Title>
+        <Title>Zx-Spectrum TAP/TZX file to Wav converter library</Title>
         <Copyright>© 2020 Andriy S'omak</Copyright>
         <PackageProjectUrl>https://github.com/semack/ZxTape2Wave.Net</PackageProjectUrl>
         <PackageVersion>1.0$(VersionSuffix)</PackageVersion>
@@ -12,7 +12,7 @@
         <FileVersion>1.0$(VersionSuffix)</FileVersion>
         <Description>Library to convert .TAP/.TZX files (a data format for ZX-Spectrum emulator) into sound WAV file.</Description>
         <PackageTags>tap converter utility csharp dotnet tape wav zx-spectrum tzx</PackageTags>
-        <PackageLicenseExpression>MIT</PackageLicenseExpression>
+        <PackageLicenseExpression>Apache-2.0</PackageLicenseExpression>
     </PropertyGroup>
 
 </Project>
