--- a/ZxTape2Wav/ZxTape2Wav.csproj
+++ b/ZxTape2Wav/ZxTape2Wav.csproj
@@ -3,12 +3,12 @@
     <PropertyGroup>
         <OutputType>Exe</OutputType>
         <TargetFramework>net5.0</TargetFramework>
-        <PublishSingleFile>true</PublishSingleFile>
-        <SelfContained>true</SelfContained>
-        <RuntimeIdentifier>osx-x64</RuntimeIdentifier>
-        <PublishTrimmed>true</PublishTrimmed>
-        <PublishReadyToRun>true</PublishReadyToRun>
-        <PublishSingleFile>true</PublishSingleFile>
+        <RootNamespace>ZxTape2Wav</RootNamespace>
+        <Title>Zx-Spectrum TAP/TZX file to Wav converter</Title>
+        <Copyright>© 2020 Andriy S'omak</Copyright>
+        <AssemblyVersion>1.0$(VersionSuffix)</AssemblyVersion>
+        <FileVersion>1.0$(VersionSuffix)</FileVersion>
+        <Description>Library to convert .TAP/.TZX files (a data format for ZX-Spectrum emulator) into sound WAV file.</Description>
     </PropertyGroup>
 
     <ItemGroup>
