Added exceptions handling

--- a/ZxTape2Wav/ZxTape2Wav.csproj
+++ b/ZxTape2Wav/ZxTape2Wav.csproj
@@ -14,6 +14,7 @@
     <ItemGroup>
       <None Remove="test.tap" />
       <None Remove="test.wav" />
+      <None Remove="test.tzx" />
     </ItemGroup>
 
     <ItemGroup>
