--- a/.github/workflows/push2nuget.yml
+++ b/.github/workflows/push2nuget.yml
@@ -2,9 +2,9 @@ name: Push to NUGET
 
 on:
   push:
-    branches: [ master ]
+    branches: [ push2nuget ]
   pull_request:
-    branches: [ master ]
+    branches: [ push2nuget ]
 
 jobs:
   build:
