--- a/ZxTape2Wav/ZxTape2Wav.csproj
+++ b/ZxTape2Wav/ZxTape2Wav.csproj
@@ -3,6 +3,7 @@
     <PropertyGroup>
         <OutputType>Exe</OutputType>
         <TargetFramework>net5.0</TargetFramework>
+        <RuntimeIdentifiers>win-x64;osx-x64;linux-x64</RuntimeIdentifiers>
         <RootNamespace>ZxTape2Wav</RootNamespace>
         <Title>Zx-Spectrum TAP/TZX file to Wav converter</Title>
         <Copyright>© 2020 Andriy S'omak</Copyright>
