--- a/ZxTape2Wav.Net/ZxTape2Wav.Net.csproj
+++ b/ZxTape2Wav.Net/ZxTape2Wav.Net.csproj
@@ -1,6 +1,7 @@
 <Project Sdk="Microsoft.NET.Sdk">
     <PropertyGroup>
-        <TargetFramework>netstandard2.1</TargetFramework>
+        <TargetFramework>netstandard2.0</TargetFramework>
+        <RuntimeIdentifiers>win-x64;osx-x64;linux-x64</RuntimeIdentifiers>
         <RootNamespace>ZxTape2Wav</RootNamespace>
         <PackageId>ZxTape2Wav.Net</PackageId>
         <Title>Zx-Spectrum TAP/TZX file to Wav converter library</Title>
