Update and rename push2nuget.yml to nuget.yml

--- a/.github/workflows/nuget.yml
+++ b/.github/workflows/nuget.yml
@@ -2,9 +2,9 @@ name: nuget
 
 on:
   push:
-    branches: [ push2nuget ]
+    branches: [ nuget ]
   pull_request:
-    branches: [ push2nuget ]
+    branches: [ nuget ]
 
 jobs:
   build:
